force-app/main/default/objects/et4ae5__Business_Unit__c/et4ae5__Business_Unit__c.object-meta.xml
<CustomObject>
    <label>Business Unit</label>
    <nameField>
        <label>Business Unit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Business Units</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>