force-app/main/default/objects/et4ae5__Business_Unit__c/fields/et4ae5__Business_Unit_ID2__c.field-meta.xml
<CustomField>
    <fullName>et4ae5__Business_Unit_ID2__c</fullName>
    <formula>et4ae5__Business_Unit_ID__c  &amp;  IF( et4ae5__IsParentAccountMID__c , &quot; (Parent)&quot;, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Unit ID</label>
    <type>Text</type>
</CustomField>