force-app/main/default/objects/et4ae5__Business_Unit__c/fields/et4ae5__Business_Unit_Name__c.field-meta.xml
<CustomField>
    <fullName>et4ae5__Business_Unit_Name__c</fullName>
    <formula>Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Unit Name</label>
    <type>Text</type>
</CustomField>