force-app/main/default/objects/et4ae5__Business_Unit__c/fields/et4ae5__BusinessUnitIDx__c.field-meta.xml
<CustomField>
    <fullName>et4ae5__BusinessUnitIDx__c</fullName>
    <formula>&quot;;&quot;&amp; et4ae5__Business_Unit_ID__c &amp;&quot;;&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BusinessUnitIDx</label>
    <type>Text</type>
</CustomField>