force-app/main/default/objects/et4ae5__Business_Unit__c/fields/et4ae5__Button_Image__c.field-meta.xml
<CustomField>
    <fullName>et4ae5__Button_Image__c</fullName>
    <formula>IF( et4ae5__Enabled__c , &quot;/img/checkbox_checked.gif&quot;, &quot;/img/checkbox_unchecked.gif&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Button Image</label>
    <type>Text</type>
</CustomField>